# projects

C1/: EC2.ipynb  PSet2.ipynb  PSet3.ipynb  fft.ipynb  gbmsim.txt  pygbm_test.ipynb  test.ipynb  wavelet_transform.ipynb
C1/pygbm/: README.md  pyproject.toml
C1/pygbm/pygbm/: __init__.py  cli.py  gbm.py  version.py
C1/pygbm/pygbm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
C1_coursework/: ps2012@hpc.cam.ac.uk  pythonvscython.ipynb  tut_autodiff.ipynb
C1_coursework/dual_autodiff_x/: LICENSE.txt  README.md  pyproject.toml  setup.py
C1_coursework/dual_autodiff_x/src/dual_autodiff_x/: __init__.py  dual.c  dual.cp313-win_amd64.pyd  dual.pyx
C1_coursework/dual_autodiff_x/src/dual_autodiff_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Cpp/: P2task1.cpp  P2task2.cpp  P4task1.cpp  Practical3.cpp
Cpp Practicals/: P4task2.cpp  P4task3.cpp
M1/: FMNIST.ipynb  Ising1d_linearregression 2.ipynb  Log_reg.ipynb  NN_reg.ipynb  XOR_reg.ipynb  best_model_FMNIST.keras  mnist_regression.ipynb
M1 Machine Learning/: PSet1.ipynb
M2/: shm_classifier.ipynb
Report/: README.md  dual_autodiff-0.1.0-py3-none-any.whl  dual_autodiff-0.1.0b0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
S1/: Accept_reject.ipynb  Method_of_moments.ipynb  Monty_Hall.ipynb  Multivariate_Normal.ipynb  PSet2.ipynb  PSet3.ipynb  PSet4.ipynb  kaon.npy  mom_data.npy  mphil.mplstyle  peaking.npy  test.ipynb  test.py
S1 Statistical Methods/: Monty_Hall.ipynb  PSet1.ipynb
S1_coursework/: README.md  S1_report.aux  S1_report.fdb_latexmk  S1_report.fls  S1_report.out  S1_report.tex  S1_report.toc
S2/: HMC.ipynb  example_2.ipynb
S2_coursework/: NUTS_test.ipynb
S2_coursework/dataset/: 1-Fragment_C_Hole_Measurements.csv  ReadMe v2.txt
