[build-system]
requires = ["setuptools","cython","wheel","setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
authors = [
    { name = "Prithvi Singh", email= "prithvisindhu9@gmail.com" },
]
description = "Perform forward mode automatic differentiation using dual numbers"
readme = "README.md"
version= "0.1.0b"
license= {file="LICENSE.txt"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Data Science/Research",
    "Topic :: Scientific/Engineering :: Machine Learning",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.8.0"
dependencies = [
    "numpy>=1.23.0"
]

[project.optional-dependencies]
GUI = ["PySide6>=6.1"]
docs = ["sphinx", "sphinx_rtd_theme>=1.0", "sphinxcontrib-jquery"]

[project.scripts]


[tool.setuptools]
package-dir = {"" = "src"}



[tool.setuptools.packages.find]
where = ["."]

[tool.pytest]
addopts = "-v" 
testpaths = ["/tests"] 